Update column headers for map and values section in HTML

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-8"> col1
+                <div class="col-8"> KORT
                     <div id="map"></div>
                 </div>
 
-                <div class="col-4"> col2 TESTVÆRDIER
+                <div class="col-4"> VÆRDIER
                     <table class="table table-striped table-bordered w-100 border text-center">
                         <thead>
                             <tr>
@@ -38,6 +38,7 @@
                                 <th scope="col">Tid</th>
                                 <th scope="col">Længdegrad</th>
                                 <th scope="col">Breddegrad</th>
+                                <th scope="col">Hastighed</th>
                             </tr>
                         </thead>
                         <tbody>
