Remove hardcoded table rows from HTML and correct speed_knot to speed_knots in mockdata

--- a/index.html
+++ b/index.html
@@ -38,14 +38,10 @@
                                 <th scope="col">Tid</th>
                                 <th scope="col">Længdegrad</th>
                                 <th scope="col">Breddegrad</th>
-                                <th scope="col">Hastighed</th>
+                                <th scope="col">Knot</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <th scope="row">1</th>
-                            <td>12:34</td>
-                            <td>56</td>
-                            <td>60</td>
                         </tbody>
                     </table>
                 </div>
