--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <th scope="col">Tid</th>
                                 <th scope="col">Længdegrad</th>
                                 <th scope="col">Breddegrad</th>
-                                <th scope="col">Knot</th>
+                                <th scope="col">Knob</th>
                             </tr>
                         </thead>
                         <tbody>
