--- a/oversigt.html
+++ b/oversigt.html
@@ -21,15 +21,12 @@
             <a class="navbar-brand custom-brand ms-3" href="#">Coast</a>
         </nav>
 
+        <div class="col-8 mx-auto">
+            <h3 class="text-center">Kort over hændelser</h3>
+            <div id="map" style="height: 600px;"></div>
+        </div>
 
-        <div class="container">
-            <div class="row">
 
-                <div class="col-8"> KORT
-                    <div id="map"></div>
-                </div>
-
-               
 
     </div>
 
