--- a/oversigt.html
+++ b/oversigt.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       
-        <div id="map" style="height: 600px;"></div>
+        <div id="map" v-once style="height: 500px;"></div>
       </div>
       
 
