feat: add navigation buttons to index and oversigt pages

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
 <body>
     <div id="app">
         <nav class="navbar navbar-expand-md navbar-light bg-light custom-navbar">
-            <a class="navbar-brand custom-brand ms-3" href="#">Coast</a>
-        </nav>
+            <div class="container-fluid">
+              <a class="navbar-brand custom-brand ms-3" href="#">Coast</a>
+          
+              <div class="ms-auto me-3">
+                <a href="oversigt.html" class="button-link">Vis tidligere hændelser</a>
+              </div>
+            </div>
+          </nav>
 
 
         <div class="container">
