--- a/oversigt.html
+++ b/oversigt.html
@@ -20,6 +20,9 @@
     <div id="app" class="container">
         <nav class="navbar navbar-expand-md navbar-light bg-light custom-navbar">
           <a class="navbar-brand custom-brand ms-3" href="#">Coast</a>
+          <div class="ms-auto me-3">
+            <a href="index.html" class="button-link">Forside</a>
+          </div>
         </nav>
       
         <div class="row my-4">
