--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container-fluid">
               <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2">
-                <span style="font-weight: bold;">Coast</span>
+                <span id="logo_button" style="font-weight: bold;">Coast</span>
               </a>
         
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -32,7 +32,7 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active text-white fw-semibold" href="oversigt.html">Tidligere hændelser</a>
+                    <a id="earlier_incidents_button" class="nav-link active text-white fw-semibold" href="oversigt.html">Tidligere hændelser</a>
                   </li>
                 </ul>
               </div>
