--- a/oversigt.html
+++ b/oversigt.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <div id="app" class="container-fluid">
+  <div id="app" > 
     <nav class="navbar navbar-expand-md navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="#">
