--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <div id="app">
     <nav class="navbar navbar-expand-md navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a id= "logo_button" class="navbar-brand d-flex align-items-center" href="#">
           <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" alt="Logo" width="30" height="30"
             class="d-inline-block align-text-top me-2">
-          <span id="logo_button" style="font-weight: bold;">Coast</span>
+          <span style="font-weight: bold;">Coast</span>
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
