--- a/oversigt.html
+++ b/oversigt.html
@@ -27,11 +27,7 @@
           <span style="font-weight: bold;">Coast</span>
         </a>
   
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-  
-        <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+        <div id="navbarContent">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a id="main_page_button" class="nav-link active text-white fw-semibold" href="index.html">Forside</a>
