fix: update font weight for main page link in navbar for consistency

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="navbarContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a id="earlier_incidents_button" class="nav-link active text-white fw-semibold"
+              <a id="earlier_incidents_button" class="nav-link active text-white fw-bold"
                 href="oversigt.html">Tidligere hændelser</a>
             </li>
           </ul>
