--- a/oversigt.html
+++ b/oversigt.html
@@ -30,7 +30,7 @@
         <div id="navbarContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a id="main_page_button" class="nav-link active text-white fw-semibold" href="index.html">Forside</a>
+              <a id="main_page_button" class="nav-link active text-white fw-bold" href="index.html">Forside</a>
             </li>
           </ul>
         </div>
