added margin to dates

--- a/oversigt.html
+++ b/oversigt.html
@@ -37,7 +37,7 @@
       </div>
     </nav>
 
-    <div class="row my-4 g-3 align-items-end">
+    <div class="row my-4 g-3 align-items-end m-3">
       <div class="col-md-3">
         <label id="choose_period_button" for="filterType" class="form-label mb-1">Vælg periode:</label>
         <select v-model="selectedPeriod" @change="filterByPeriod" class="form-select">
