--- a/oversigt.html
+++ b/oversigt.html
@@ -22,7 +22,7 @@
   <div id="app" > 
     <nav class="navbar navbar-expand-md navbar-dark">
       <div class="container-fluid">
-        <a id="logo_button" class="navbar-brand d-flex align-items-center" href="#">
+        <a id="logo_button" class="navbar-brand d-flex align-items-center" href="index.htmls">
           <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2">
           <span style="font-weight: bold;">Coast</span>
         </a>
