--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <div class="container my-4">
-            <div class="d-flex flex-column flex-md-row gap-4 align-items-stretch">
+            <div class="d-flex flex-column flex-md-row gap-4 align-items-stretch p-2">
                 <div class="flex-grow-1">
                     <div id="map" style="height:700px; width:100%;"></div>
                 </div>
